--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,12 +40,12 @@ dependencies {
     implementation 'com.squareup.retrofit2:retrofit:2.5.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.5.0'
     implementation 'com.squareup.okhttp3:logging-interceptor:3.8.0'
-    // Navigation
-    implementation "android.arch.navigation:navigation-fragment-ktx:$nav_version"
-    implementation "android.arch.navigation:navigation-ui-ktx:$nav_version"
     // ViewModel
     implementation 'androidx.lifecycle:lifecycle-extensions:2.0.0'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.0.0'
+    // Android Material components
+    implementation 'com.google.android.material:material:1.1.0-alpha02'
+
     // Data binding
     implementation "android.arch.lifecycle:extensions:1.1.1"
     kapt "com.android.databinding:compiler:3.3.0"
