--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,7 +32,7 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation"org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'androidx.appcompat:appcompat:1.0.2'
-    implementation 'androidx.core:core-ktx:1.1.0-alpha04'
+    implementation 'androidx.core:core-ktx:1.0.1'
     // Constraint layout support.
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
@@ -43,12 +43,13 @@ dependencies {
     // ViewModel
     implementation 'androidx.lifecycle:lifecycle-extensions:2.0.0'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.0.0'
-    // Android Material components
-    implementation 'com.google.android.material:material:1.1.0-alpha02'
-
     // Data binding
     implementation "android.arch.lifecycle:extensions:1.1.1"
     kapt "com.android.databinding:compiler:3.3.0"
+    // Android Material components
+    implementation 'com.google.android.material:material:1.1.0-alpha02'
+    // OAuth 1.0 support
+    implementation 'se.akerfeldt:okhttp-signpost:1.1.0'
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.1.0-alpha4'
