Analysis result & UI improvements.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,17 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="mx.fidisohl.tweetmood">
+          xmlns:tools="http://schemas.android.com/tools" package="mx.fidisohl.tweetmood">
 
     <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
+            android:name=".utils.TweetMoodApp"
             android:allowBackup="true"
             android:icon="@mipmap/ic_launcher"
             android:label="@string/app_name"
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
-            android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+            android:theme="@style/AppTheme" tools:ignore="GoogleAppIndexingWarning">
+
+        <activity android:name=".ui.analysis.AnalysisActivity"
+                  android:label="@string/analysis_result"
+        >
+        </activity>
+        <activity android:name=".ui.main.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
