Added Splash, Launcher, change color palette.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,9 @@
                   android:label="@string/analysis_result"
         >
         </activity>
-        <activity android:name=".ui.main.MainActivity">
+        <activity android:name=".ui.main.MainActivity"
+                  android:theme="@style/AppThemeWhite.SplashActivity"
+        >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
